# python-mailcow

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  setup.cfg  setup.py
src/mailcow/: __init__.py  __main__.py  cli.py  config.py  globals.py  menu.py  utils.py
