[metadata]

[tox:tox]
skipsdist = True
envlist = py30,py31,py32,py33,py34,py35,py36,py37,py38,py39,pylint,twine-check
requires =
    tox-pipenv
    setuptools

[testenv]
deps =
    tox-pipenv
    setuptools
    pylint
    twine

[testenv:pylint]
commands =
  pylint --exit-zero -f colorized src/

[testenv:twine-check]
commands =
  twine check dist/*