[metadata]
name = python-mailcow
author = Jean-Denis Gebhardt
author_email = projects@der-jd.de
description = Interact with mailcow API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/derJD/python-mailcow
license = GPLv3+
classifiers =
  Environment :: Console
  Intended Audience :: System Administrators
  Operating System :: OS Independent
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
  Topic :: System :: Systems Administration
  Topic :: Utilities

[options]
packages = find:
package_dir =
  = src
install_requires =
  requests
  ptable
  configparser
python_requires = >=3.6
setup_requires =
  setuptools_scm

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    mailcow = mailcow.cli:main